--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/akshat-khosya/backend-template#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "config": "^3.3.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
@@ -28,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.4.6",
+    "nodemon": "^2.0.20",
     "pino": "^8.3.0",
     "pino-pretty": "^8.1.0",
     "yup": "^0.32.11"
