--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonpatch": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.4.6",
     "nodemon": "^2.0.20",
     "pino": "^8.3.0",
     "pino-pretty": "^8.1.0",
+    "sharp": "^0.31.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^18.0.6",
     "@types/pino": "^7.0.5",
+    "@types/sharp": "^0.31.0",
     "@types/yup": "^0.29.14",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
